kubernetes/apps/immich-lightroom/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich-lightroom
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
